[project]
name = "limbus-font-helper"
version = "0.1.0"
description = "Tool for merging fonts for Limbus Company localizations"
requires-python = ">=3.13"
dependencies = [
    "fonttools[lxml,ufo,unicode,woff]>=4.57.0",
    "jinja2>=3.1.6",
    "jsonpath-ng>=1.7.0",
    "msgspec>=0.19.0",
    "pillow>=11.1.0",
    "ruff>=0.11.3",
    "toml>=0.10.2",
]
